Reports - Time rounding off in Jquery Datatable

--- a/Web/WebApplication2/Views/Home/TimeEntry.cshtml
+++ b/Web/WebApplication2/Views/Home/TimeEntry.cshtml
@@ -136,7 +136,7 @@
 <script type="text/javascript">
 
     $(document).ready(function () {
-
+        debugger
         $('#Date').hide();
         $('#project').hide();
         $('#workcode').hide();
