names of actions changed and encryption.cs file moved to helper folder

--- a/Web/TimeManagement/Views/ForgetPassword/UserIdForForgetPassword.cshtml
+++ b/Web/TimeManagement/Views/ForgetPassword/UserIdForForgetPassword.cshtml
@@ -7,7 +7,7 @@
         $('#userName').focus();
     });
 </script>
-@using (Html.BeginForm("Entry", "ForgetPassword", FormMethod.Post, new { @class = "form-horizontal" }))
+@using (Html.BeginForm("ForgetPasswordEntry", "ForgetPassword", FormMethod.Post, new { @class = "form-horizontal" }))
 {
     <div class="login_box clearfix">
         <div class="top_b">
