renamed action and added notification in forget password
Notify user, if UserID not found in Trex.
Change the Action(UserIdFroForgetPassword)

--- a/Web/TimeManagement/Views/Home/Index.cshtml
+++ b/Web/TimeManagement/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="row btm_b clearfix">
-            @Html.ActionLink("Forget Password ?", "UserIdForForgetPassword", "ForgetPassword", null, new { @class = "btn" })
+            @Html.ActionLink("Forget Password ?", "AuthenticateUserId", "ForgetPassword", null, new { @class = "btn" })
             <button class="btn btn-primary pull-right" type="submit" id="btnSignIn">
                 Sign In
             </button>
