changed form request to ajax for forget password page

--- a/Web/TimeManagement/Views/ForgetPassword/AuthenticateUserId.cshtml
+++ b/Web/TimeManagement/Views/ForgetPassword/AuthenticateUserId.cshtml
@@ -7,30 +7,50 @@
         $('#userName').focus();
     });
 </script>
-@using (Html.BeginForm("ForgetPasswordEntry", "ForgetPassword", FormMethod.Post, new { @class = "form-horizontal" }))
-{
-    <div class="login_box clearfix">
-        <div class="top_b">
-            Forget Password
-        </div>
-        <div class="cnt_b">
-            <div class="row">
-                <div class="col-lg-10 gap-left25 pad-left20">
-                    <div class="col-lg-12 gap-bottom10">
-                        <div class="input-group">
+<script>
+    $(document).ready(function () {
+        $("#sumbitUserId").click(function () {
+            var userId = $("#UserId").val();
+            $.ajax({
+                url: '@Url.Action("ForgetPasswordEntry", "ForgetPassword")?userId=' + userId,
+                success: function (data) {
+                    if (data.status == "success") {
+                        window.location = "../Home/Index";
+                    } else {
+                        $("#UserId").val('');
+                        $('#incorrectMessage').text("The user name provided is incorrect.");
+                    }
+                }
+            });
+        });
+    });
+</script>
+@*@using (Html.BeginForm("ForgetPasswordEntry", "ForgetPassword", FormMethod.Post, new { @class = "form-horizontal" }))*@
+<div class="login_box clearfix">
+    <div class="top_b">
+        Forget Password
+    </div>
+    <div class="cnt_b">
+        <div class="row">
+            <div class="col-lg-10 gap-left25 pad-left20">
+                <div class="col-lg-12 gap-bottom10">
+                    <div class="input-group">
 
-                            <span class="input-group-addon"><i class="fa-user"></i></span>
-                            @Html.TextBoxFor(m => m.UserId, new { @class = "required  form-control", id = "UserId", name = "UserId" })
-                        </div>
-                        <div>@Html.ValidationMessageFor(m => m.UserId)</div>
+                        <span class="input-group-addon"><i class="fa-user"></i></span>
+                        @Html.TextBoxFor(m => m.UserId, new { @class = "required  form-control", id = "UserId", name = "UserId" })
                     </div>
+                    <div>@Html.ValidationMessageFor(m => m.UserId)</div>
+                </div>
+                <div id="incorrectMessage" class="col-lg-12 gap-bottom5 text-danger">
                 </div>
             </div>
         </div>
-        <div class="btm_b clearfix">
-            <button class="btn btn-primary pull-right" type="submit">
-                Submit
-            </button>
-        </div>
     </div>
-}
+    <div class="btm_b clearfix">
+        <button id="sumbitUserId" class="btn btn-primary pull-right" type="submit">
+            Submit
+        </button>
+    </div>
+
+</div>
+
