--- a/Web/TimeManagement/Views/Report/Billing.cshtml
+++ b/Web/TimeManagement/Views/Report/Billing.cshtml
@@ -1,4 +1,6 @@
 ﻿@model TimeManagement.ViewModel.BillingModel
+<link href="~/Content/css/select2.min.css" rel="stylesheet" />
+<script src="~/Scripts/select2.min.js"></script>
 <script type="text/javascript">
 
 
@@ -25,7 +27,7 @@
             location.href = '@Url.Content("~/Report/ExportBillingDetails")';
         });
 
-        $('#location').selectpicker({ noneSelectedText: 'Select Location' });
+        //$('#location').selectpicker({ noneSelectedText: 'Select Location' });
 
         $("#fromdate").change(function () {
             var fromdate = $('#fromdate').val();
@@ -53,6 +55,10 @@
 
         });
 
+        $("#location").select2({
+            allowClear: true,
+            placeholder: "Select Location",
+         });
 
     });
 
@@ -78,6 +84,8 @@
         return true;
     }
 
+    
+
 </script>
 <div class="row">
     <div class="boxshade">
@@ -91,37 +99,43 @@
                     {
                         <div class="col-lg-2">
                             <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>From Date</b></div>
+                                <b>From Date</b>
+                            </div>
                             <div class="col-lg-12 pad0">
                                 <input type="text" class="form-control datePicker required" id="fromdate" placeholder="From"
-                                    name="fromDate" />
+                                       name="fromDate" />
                                 <div id="fdate" class="hidden">
-                                    From Date Required</div>
+                                    From Date Required
+                                </div>
                             </div>
                         </div>
-                 
+
                         <div class="col-lg-2">
                             <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>To Date</b></div>
+                                <b>To Date</b>
+                            </div>
                             <div class="col-lg-12 pad0">
                                 <input type="text" class="form-control datePicker required" id="todate" placeholder="To" name="toDate" />
                                 <div id="tdate" class="hidden">
-                                    To Date Required</div>
+                                    To Date Required
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-2">
                             <div class="col-lg-12 pad0 gap-bottom5">
-                                <b>Location</b></div>
+                                <b>Location</b>
+                            </div>
                             <div class="col-lg-12 pad0">
-                                @Html.DropDownList("locations", null,"Select Location", new { @class = "form-control", id = "location" })
+                                @Html.DropDownList("locations", null," ",  new { @class = "form-control", id = "location" })
                             </div>
                         </div>
                         <div class="col-lg-12 gap-top5">
                             <button type="submit" onclick="return fundate();" class="btn btn-small btn-primary pull-right">
-                                Submit</button>
+                                Submit
+                            </button>
                         </div>
-                        
-                        
+
+
                     }
                 </div>
                 <div class="col-lg-12">
@@ -155,35 +169,40 @@
                             </tr>
                         </thead>
                         @{
-                decimal total = 0;
-                foreach (TimeManagement.Domain.WorkSummary workSummary in Model.Summary)
-                {
-                    total = 0;
-                        
-                            <tr>
-                                <td style="text-align: left">@workSummary.Company
+                            decimal total = 0;
+                            foreach (TimeManagement.Domain.WorkSummary workSummary in Model.Summary)
+                            {
+                                total = 0;
+
+                                <tr>
+                                    <td style="text-align: left">
+                                        @workSummary.Company
                                 </td>
-                                <td style="text-align: left">@workSummary.Employee
-                                </td>
-                                <td style="text-align: left">@workSummary.WorkCode
-                                </td>
-                                <td style="text-align: right">
-                                    $@workSummary.BillRate
-                                </td>
-                                <td style="text-align: center">@workSummary.Hours
-                                </td>
-                                <td style="text-align: right">
-                                    $@workSummary.Total
-                                </td>
-                            </tr>
-			       
-                }
+                                <td style="text-align: left">
+                                    @workSummary.Employee
+                            </td>
+                            <td style="text-align: left">
+                                @workSummary.WorkCode
+                        </td>
+                        <td style="text-align: right">
+                            $@workSummary.BillRate
+                        </td>
+                        <td style="text-align: center">
+                            @workSummary.Hours
+                    </td>
+                    <td style="text-align: right">
+                        $@workSummary.Total
+                    </td>
+                </tr>
+
+            }
                         }
                     </table>
                 </div>
                 <div class="col-lg-12 gap-bottom10">
                     <button type="button" class="btn btn-success export pull-right" id="btnExport">
-                        Export</button>
+                        Export
+                    </button>
                 </div>
             }
         </div>
